layout bugfix for ccm.cloze.js

--- a/cloze/resources/default.css
+++ b/cloze/resources/default.css
@@ -74,7 +74,8 @@ button:disabled {
 
 .gap {
   font-size: 0;
-  padding: 0 1px;
+  padding-left: 0;
+  padding-right: 0.3rem;
 }
 
 .gap input {
